--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, minimal-spring ]
   pull_request:
     branches: [ master ]
 
@@ -25,3 +25,5 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B verify
+    - name: Publish Test Report
+      uses: scacap/action-surefire-report@v1
