--- a/reactive/pom.xml
+++ b/reactive/pom.xml
@@ -10,12 +10,12 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <groupId>no.maddin.minimal-spring</groupId>
-    <artifactId>mvc</artifactId>
+    <artifactId>reactive</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
