--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,10 +26,17 @@ steps:
 - task: Cache@2
   inputs:
     key: 'maven | "$(Agent.OS)" | **/pom.xml'
-    restoreKeys: |
-      maven | "$(Agent.OS)"
-      maven
+    restoreKeys: 'maven | "$(Agent.OS)" | maven'
     path: $(MAVEN_CACHE_FOLDER)
   displayName: Cache Maven local repo
 
-- script: mvn install -B -e
+- task: Maven@3
+  inputs:
+    mavenPomFile: 'pom.xml'
+    mavenOptions: '-Xmx3072m'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.17'
+    jdkArchitectureOption: 'x64'
+    publishJUnitResults: true
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+    goals: 'verify'
